--- a/css/main.css
+++ b/css/main.css
@@ -164,4 +164,14 @@ footer h2 {
   display: inline;
   padding-right: 10px;
 }
+
+/*******ABOUT ME PAGE *******/
+#about-main {
+  text-decoration: none;
+  padding: 5px 25px;
+  width: 50%;
+  text-align: left;
+  margin-right: 25%;
+  margin-left: 25%;
+}
 /*# sourceMappingURL=main.css.map */
