--- a/css/main.scss
+++ b/css/main.scss
@@ -162,3 +162,13 @@ footer h2{
     padding-right: 10px;
 
 }
+/*******ABOUT ME PAGE *******/
+#about-main {
+        text-decoration: none;
+        padding: 5px 25px;
+        width: 50%;
+        text-align: left;
+        margin-right: 25%;
+        margin-left: 25%;
+    
+}
