--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,8 @@ header .headerblock {
   margin-right: 20px;
   padding: 5px 12px;
   border-radius: 10px;
+  text-align: center;
+  line-height: inherit;
 }
 
 .button a:hover {
@@ -163,6 +165,53 @@ footer h2 {
   padding: 0;
   display: inline;
   padding-right: 10px;
+}
+
+/*******MOBILE CSS *******/
+@media screen and (max-width: 600px) {
+  .nav-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 12em;
+  }
+  .nav-container li a {
+    background-color: #000;
+    color: #a4e9eb;
+    border-radius: 12px;
+    text-align: center;
+    margin-top: 2px;
+  }
+  .nav-container li a:hover {
+    text-decoration: underline;
+    background: transparent;
+    color: #000;
+  }
+  .main-content h1 {
+    font-size: 50px;
+  }
+  .main-content h3 {
+    font-size: 32px;
+  }
+  .homepagenav button a {
+    width: 82px;
+    text-align: center;
+  }
+  footer {
+    margin-top: 300px;
+  }
+  .footernav {
+    display: inline;
+  }
+  .footernav h2 {
+    text-align: center;
+  }
 }
 
 /*******ABOUT ME PAGE *******/
