--- a/css/main.css
+++ b/css/main.css
@@ -9,27 +9,22 @@ body {
 /*Makes Top Navigation look pretty*/
 nav ul {
   list-style-type: none;
-  margin: 0;
-  margin-left: 18%;
+  /*Removes bullet points in nav*/
+  margin: auto;
+  overflow: hidden;
+  width: 40%;
   padding: 0;
-}
-
-nav ul ul {
+  /*Lines 12 thru 15 center nav items*/
   display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  float: left;
+  /*places nav items all in one line*/
 }
 
 nav ul li {
   text-decoration: none;
-  list-style-type: none;
 }
 
 nav ul a {
-  display: block;
   padding: 0 1em;
-  float: left;
   font-size: 22px;
   color: #000;
   text-decoration: none;
@@ -43,13 +38,6 @@ nav ul a:hover {
   text-decoration: none;
   text-align: center;
   border-radius: 12px;
-}
-
-/*Formats Navigation to be Center Aligned*/
-.nav-container {
-  background: transparent;
-  margin-bottom: 13%;
-  margin-left: 13%;
 }
 
 /*Makes Greeting Block look pretty*/
@@ -84,7 +72,6 @@ header .headerblock {
   font-size: 34px;
   text-decoration: none;
   text-transform: uppercase;
-  float: left;
   margin-right: 20px;
   padding: 5px 12px;
   border-radius: 10px;
@@ -121,10 +108,12 @@ header .headerblock {
 }
 
 .homepagenav {
-  width: 50%;
-  margin: auto;
-  height: 60%;
-  margin-left: 35%;
+  width: 60%;
+  margin: 0;
+  margin-left: 25%;
+  padding: 0;
+  display: -webkit-inline-box;
+  /*Places all items on one line*/
 }
 
 hr {
@@ -138,7 +127,6 @@ footer h2 {
 
 .footernav {
   padding: 2em;
-  margin-left: 20%;
 }
 
 .ul-footer li a:hover {
@@ -147,21 +135,17 @@ footer h2 {
   color: #000;
 }
 
-.ul-footer ul {
-  float: left;
-  position: absolute;
-  width: 100%;
-  margin-left: 50%;
-}
-
-.ul-footer li {
-  display: inline-block;
-  margin-left: 10px;
+.ul-footer {
+  margin: auto;
+  padding: 0;
+  overflow: hidden;
+  width: 25%;
 }
 
 .ul-footer li a {
   list-style-type: none;
   margin: 0;
+  margin-left: 10px;
   padding: 0;
   display: inline;
   padding-right: 10px;
