--- a/css/main.scss
+++ b/css/main.scss
@@ -11,13 +11,15 @@ nav ul {
     list-style-type:none; /*Removes bullet points in nav*/
     margin: auto;
     overflow: hidden;
-    width: 40%;
+    width: 50%;
     padding: 0; /*Lines 12 thru 15 center nav items*/
-    display: -webkit-box; /*places nav items all in one line*/
+    display: block; /*places nav items all in one line*/
+    text-align: center;
     
 
     li {
         text-decoration: none;
+        display: inline-block;
     } 
 
     a {
@@ -107,10 +109,16 @@ header {
 }
 .homepagenav {
     width: 60%;
-    margin: 0;
     margin-left: 25%;
     padding: 0;
-    display: -webkit-inline-box; /*Places all items on one line*/
+    margin: auto;
+    display: inline;
+    text-align: center;
+    /*display: -webkit-inline-box; *Places all items on one line*/
+
+button {
+    display: inline-block;
+}
 
 }
 hr {
