Centers all content at up to 1300px screen width

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ header .headerblock {
 }
 
 /*Makes the Call/Email/Personal Blog Buttons look pretty*/
-.button a {
+.homepagenav a, .homepagenav .button {
   background-color: #000;
   color: #a4e9eb;
   font-size: 34px;
@@ -81,7 +81,7 @@ header .headerblock {
   line-height: inherit;
 }
 
-.button a:hover {
+.homepagenav a:hover {
   background-color: #a4e9eb;
   color: #000;
   text-decoration: underline;
@@ -110,17 +110,13 @@ header .headerblock {
 }
 
 .homepagenav {
-  width: 60%;
-  margin-left: 25%;
-  padding: 0;
+  /*display: -webkit-inline-box; Places all items on one line*/
+  list-style-type: none;
   margin: auto;
-  display: inline;
+  width: 50%;
+  padding: 0;
+  display: block;
   text-align: center;
-  /*display: -webkit-inline-box; *Places all items on one line*/
-}
-
-.homepagenav button {
-  display: inline-block;
 }
 
 hr {
@@ -151,11 +147,10 @@ footer h2 {
 
 .ul-footer li a {
   list-style-type: none;
-  margin: 0;
-  margin-left: 10px;
   padding: 0;
   display: inline;
-  padding-right: 10px;
+  margin: auto;
+  text-align: center;
 }
 
 /*******MOBILE CSS *******/
