--- a/css/main.css
+++ b/css/main.css
@@ -68,27 +68,14 @@ header .headerblock {
 }
 
 /*Makes the Call/Email/Personal Blog Buttons look pretty*/
-.homepagenav a, .homepagenav .button {
-  background-color: #000;
-  color: #a4e9eb;
-  font-size: 34px;
-  text-decoration: none;
-  text-transform: uppercase;
-  margin-right: 20px;
-  padding: 5px 12px;
-  border-radius: 10px;
-  text-align: center;
-  line-height: inherit;
-}
-
-.homepagenav a:hover {
-  background-color: #a4e9eb;
-  color: #000;
-  text-decoration: underline;
-}
-
 .main-content {
   height: 70vh;
+  list-style-type: none;
+  margin: auto;
+  width: 50%;
+  padding: 0;
+  display: block;
+  text-align: center;
 }
 
 .main-content h1 {
@@ -105,18 +92,30 @@ header .headerblock {
   margin-top: 4px;
 }
 
-.myname {
-  margin-bottom: 2px;
+.main-content a, .main-content .button {
+  background-color: #000;
+  color: #a4e9eb;
+  font-size: 34px;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-right: 20px;
+  padding: 5px 12px;
+  border-radius: 10px;
+  text-align: center;
+  line-height: inherit;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
-.homepagenav {
-  /*display: -webkit-inline-box; Places all items on one line*/
-  list-style-type: none;
-  margin: auto;
-  width: 50%;
-  padding: 0;
-  display: block;
-  text-align: center;
+.main-content a:hover {
+  background-color: #a4e9eb;
+  color: #000;
+  text-decoration: underline;
+}
+
+.myname {
+  margin-bottom: 2px;
 }
 
 hr {
@@ -154,23 +153,16 @@ footer h2 {
 }
 
 /*******MOBILE CSS *******/
-@media screen and (max-width: 625px) {
+@media screen and (max-width: 600px) {
   .nav-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 12em;
+    width: 100%;
   }
   .nav-container li a {
-    background-color: #000;
-    color: #a4e9eb;
-    border-radius: 12px;
     text-align: center;
     margin-top: 2px;
   }
@@ -179,24 +171,66 @@ footer h2 {
     background: transparent;
     color: #000;
   }
+  nav {
+    width: 100%;
+  }
+  nav ul {
+    width: 100% !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   .main-content h1 {
     font-size: 50px;
   }
   .main-content h3 {
     font-size: 32px;
   }
-  .homepagenav button a {
+  .main-content button a {
     width: 82px;
     text-align: center;
   }
   footer {
-    margin-top: 300px;
+    margin-top: 13px;
   }
-  .footernav {
+  .footernav ul {
     display: inline;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footernav h2 {
     text-align: center;
+  }
+  .main-content a, .main-content .button {
+    background-color: #000;
+    color: #a4e9eb;
+    font-size: 34px;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: auto;
+    padding: 5px 12px;
+    border-radius: 10px;
+    text-align: center;
+    line-height: inherit;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
+  }
+}
+
+@media screen and (max-width: 875px) {
+  nav ul {
+    width: 80%;
+  }
+  .main-content {
+    width: 100%;
+  }
+  footer {
+    margin-top: 26px;
+  }
+  .ul-footer {
+    width: 75%;
   }
 }
 
