--- a/css/main.scss
+++ b/css/main.scss
@@ -228,6 +228,41 @@ footer h2{
     }   
 }
 
+@media only screen and (max-width: 992px){
+    nav ul{
+        width: 80%;
+
+    }
+    .main-content {
+        width: 100%;
+    
+    }
+    footer {
+        margin-top: 13px;
+    }
+
+    .ul-footer {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 992px){
+    nav ul{
+        width: 80%;
+
+    }
+    .main-content {
+        width: 100%;
+    
+    }
+    footer {
+        margin-top: 13px;
+    }
+
+    .ul-footer {
+        width: 100%;
+    }
+}
 
 
 
