--- a/css/main.scss
+++ b/css/main.scss
@@ -144,6 +144,20 @@ footer h2{
 
 }
 /*******MOBILE CSS *******/
+@media screen and (max-width:320px){
+    .nav-container{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        
+    }
+    .nav-container li a {
+        text-align: center;
+        margin-top: 2px;
+        
+    }
+}
+
 @media screen and (max-width: 600px) {
     .nav-container{
         display: flex;
