--- a/css/main.scss
+++ b/css/main.scss
@@ -145,20 +145,93 @@ footer h2{
 }
 /*******MOBILE CSS *******/
 @media screen and (max-width:320px){
+    header {
+        padding: 0;
+                   
+        .headerblock {
+            background-color: #000;
+            color: #a4e9eb;
+            font-weight: bold;
+            font-size: 32px;
+            text-transform: uppercase;
+            text-decoration: none;
+            /*width: 320px !important;
+            height: 20% !important;*/
+            text-align: center;
+            
+        }  
+    }
     .nav-container{
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
+        margin-top: 2em;
+        width: 320px;
         
     }
     .nav-container li a {
         text-align: center;
-        margin-top: 2px;
-        
+        font-size: 8px;      
     }
+    /*nav ul{
+        width: 100% !important;
+
+    } */
+
+    .main-content{
+        height: 52vh;
+    }
+
+    .main-content h1 {
+        font-size: 48px;
+    }
+    .main-content h3 {
+        font-size: 32px;
+    }
+
+    .main-content a, .main-content .button {
+        background-color: #000;
+        color: #a4e9eb;
+        /*font-size: 18px !important; */
+        text-decoration: none;
+        text-transform: uppercase;
+        /*margin: auto;*/
+        margin-right: 12px;
+        margin-left: 12px;
+        padding: 5px 12px;
+        border-radius: 10px;
+        text-align: center;
+        line-height: 2;
+        -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+        align-items: baseline;
+    }
+
+    footer{
+        margin-top: 7px;
+    }
+
+    footer nav ul{
+        padding-top: 0;
+        display: inline;
+       /* width: 100% !important;*/
+    }
+
+    footer nav ul a{
+        font-size: 12px;
+    }
+
+    footer h2 {
+        font-size:14px;
+        margin: 5px;
+        padding: 0 12px;
+        /*padding-bottom: 10px !important; */
+    }
+
+
+
+
+    
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
     .nav-container{
         display: flex;
         flex-wrap: wrap;
@@ -181,7 +254,7 @@ footer h2{
     }
 
     nav ul{
-        width: 100% !important;
+        /*width: 100% !important; */
         display:flex;
     }
 
