--- a/css/main.scss
+++ b/css/main.scss
@@ -76,7 +76,7 @@ header {
     }
     list-style-type: none;
     margin: auto;
-    width: 50%;
+    width: 51%;
     padding: 0;
     display: block;
     text-align: center;
@@ -144,21 +144,27 @@ footer h2{
 
 }
 /*******MOBILE CSS *******/
-@media screen and (max-width:320px){
+@media screen and (min-width:320px) and (max-width:599px){
     .nav-container{
-        display: flex;
+        display: inline;
         flex-wrap: wrap;
         width: 100%;
         
     }
     .nav-container li a {
-        text-align: center;
+        text-align: left;
         margin-top: 2px;
         
     }
-}
+    .main-content a, .main-content .button {
+        line-height: 2;
+    }
 
-@media screen and (max-width: 600px) {
+    footer {
+        margin-top: 32px;
+    }
+}
+@media screen and (min-width: 600px) and (max-width: 874px) {
     .nav-container{
         display: flex;
         flex-wrap: wrap;
@@ -183,6 +189,10 @@ footer h2{
     nav ul{
         width: 100% !important;
         display:flex;
+    }
+
+    .main-content{
+        width: 100%;
     }
 
     .main-content h1 {
@@ -225,7 +235,7 @@ footer h2{
 
 }
 
-@media screen and (max-width: 875px){
+@media screen and (min-width: 875px) and (max-width: 991px){
     
     nav ul{
         width: 80%;
@@ -238,11 +248,11 @@ footer h2{
         margin-top: 26px;
     }
     .ul-footer {
-        width: 75%;
+        width: 100%;
     }   
 }
 
-@media only screen and (max-width: 992px){
+/*@media only screen and (min-width: 876px) and (max-width:991){
     nav ul{
         width: 80%;
 
@@ -258,23 +268,25 @@ footer h2{
     .ul-footer {
         width: 100%;
     }
-}
+}*/
 
-@media only screen and (min-width: 992px){
-    nav ul{
-        width: 80%;
-
-    }
-    .main-content {
-        width: 100%;
-    
-    }
+@media only screen and (min-width: 992px) and (max-width:1224px){
     footer {
-        margin-top: 13px;
+        margin-top: 10%;
     }
 
     .ul-footer {
         width: 100%;
+    }
+
+    .main-content {
+        width: 100%;
+    }
+} 
+
+@media only screen and (min-width: 1224px) and (max-width: 1274px){
+    .main-content {
+        width: 54%;
     }
 }
 
