--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: 'Didot', Georgia, 'Times New Roman', Times, serif;
   background-color: #ff48a5;
-  cursor: pointer !important;
+  cursor: url('https://maljoylove.com/wp-content/uploads/2021/07/Black-Pixel-Mouse-Cursor-Arow-Fixed.png');
 }
 
 #wraplife {
@@ -300,8 +300,31 @@ input, textarea, label {
 }
 
 /*******MOBILE CSS *******/
-@media screen and (min-width: 320px) and (max-width: 411px) {
-  .nav-container, .main-content {
+@media screen and (max-width: 450px) {
+ 
+  header {
+    width: 100%;
+  }
+
+  nav {
+    display:none;
+  }
+
+  .main-content {
+    width: 100%;
+  }
+  .main-content a{
+    font-size: 32px;
+    margin: 0 auto;
+  }
+
+  
+
+
+ 
+ 
+ 
+  /*.nav-container, .main-content {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -318,6 +341,6 @@ input, textarea, label {
     display: flex;
     font-size: 16px;
     margin: 12px;
-  }
+  } */
 }
 /*# sourceMappingURL=main.css.map */
